Opened 10 years ago

Closed 10 years ago

#12285 closed bug (fixed)

[ShowImage] deadlocks on copy selection

Reported by: Paradoxon Owned by: axeld
Priority: blocker Milestone: R1/beta1
Component: Kits/Application Kit Version: R1/Development
Keywords: clipboard Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by diver)

Open a image in ShowImage, mark an area from the image Press copy and ShowImage will freeze

Change History (9)

comment:1 by Paradoxon, 10 years ago

Same happens to wonderbrush so it seems be an Clipboard problem

comment:2 by diver, 10 years ago

Milestone: UnscheduledR1
Summary: Schowimage crashes on copy[ShowImage] deadlocks on copy selection

comment:3 by Paradoxon, 10 years ago

It seems to hang on the SendMessage on line 210. But no idea how this can related to copying a (archived) Bitmap https://cgit.haiku-os.org/haiku/tree/src/kits/app/Clipboard.cpp#n210

comment:4 by diver, 10 years ago

Description: modified (diff)
Owner: changed from leavengood to axeld
Status: newassigned

Terminal deadlocks on copy (large) selection too. Related? Possibly another launch_daemon regression...

comment:5 by humdinger, 10 years ago

Component: Applications/ShowImageKits/Application Kit
Keywords: clipboard added

comment:6 by axeld, 10 years ago

Milestone: R1R1/beta1
Priority: normalblocker

Since mmlr didn't report his findings here yet: it's indeed a launch_daemon regression. The launch_daemon owns the primary communications ports of the registrar which breaks large messages that use areas to pass their data.

comment:7 by mmlr, 10 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev49591.

Note: See TracTickets for help on using tickets.